hphp/hack/test/class_aliases/basic_alias.php.exp
ERROR: File "basic_alias.php", line 10, characters 7-11:
Unbound name: `Alias` (an object type) (Naming[2049])
